--- a/research.qmd
+++ b/research.qmd
@@ -1,3 +1,14 @@
 ---
-title: "Research"
+title: ""
+pagetitle: "Research"
 ---
+
+## Current Projects
+
+### _Mortgage Pricing in South Africa_
+
+We aim to document differences in offer probabilities and in offered interest rates for mortgage applicants of different characteristics, e.g. age, sex, marital status, and first-time buyer status.
+
+### _The Market for Funeral Insurance in South Africa_
+
+Funeral insurance is a widely purchased product in South Africa, while life insurance is purchased by only a small minority of consumers. We aim to document the extent to which these two products are substitutable on both the supply and demand side of the market. On the supply side, for example, this may include regulatory barriers; on the demand side, this might include differences in mortality rates, wealth, or family structure (including, e.g. patterns of intergenerational coresidence).
