Add news section and change link colour

--- a/index.qmd
+++ b/index.qmd
@@ -7,3 +7,10 @@ We are a research group within the [Department of Economics](https://www.ekon.su
 We use tools from applied microeconomics and causal inference to study how people make financial decisions and what influences their choices. We focus on South African survey and administrative data in a variety of domains, including retirement, insurance, and credit.
 
 ![](images/banner_001.jpg)
+
+## News
+
+- **March, 2025**: We welcomed [Dr Matthew Olckers](https://matthewolckers.com/) as a senior researcher and founding member of our group. Matthew has worked on a range of household finance topics, including retirement saving and financial literacy. 
+- **February, 2025**: [Dr Allan Davids](https://allandav.github.io/), a senior lectuer at the University of Cape Town, has joined our group as an affiliated researcher and founding member. Allan's research focusses on housing and credit. 
+- **January, 2025**: [Dr Jesse Naidoo](https://jnaidoo.rbind.io/) joined Stellenbosch University as the founding director of our research centre. [Here is](https://www.ekon.sun.ac.za/blog/2025-1-17-jesse-naidoo-heads-new-centre) an interview with Jesse where he describes his vision for the Centre.
+
