--- a/team.qmd
+++ b/team.qmd
@@ -20,7 +20,7 @@ format:
 
 _PhD, University of Chicago_
 
-_Research interests:_ interaction of formal and informal financial mechanisms, life-cycle dynamics (e.g. retirement savings), intrafamily transfers (e.g. inheritance, divorce, informal insurance).
+Jesse's research interests include the interaction of formal and informal financial systems, retirement savings, and how households use the financial system to navigate major life events like death and divorce.
 </div>
 
 <div class="team-member-links">
@@ -39,7 +39,7 @@ _Research interests:_ interaction of formal and informal financial mechanisms, l
 
 _PhD, University of Cape Town_
 
-_Research interests:_ housing markets, consumer credit, consumer financial stress.
+Allan's research focusses on housing, which is often the largest asset and largest liability for households. He focusses on how housing and credit decisions can be a driver of wealth inequality.
 </div>
 
 <div class="team-member-links">
@@ -58,7 +58,7 @@ _Research interests:_ housing markets, consumer credit, consumer financial stres
 
 _PhD, Paris School of Economics_
 
-_Research interests:_ intergenerational mobility, financial literacy and the value of advice, behavioural imperfections in consumer decision-making, retirement savings.
+Matthew's research interests include retirement saving, financial advice, and informal borrowing. His past research includes projects on financial literacy, adoption of mobile money, and sports betting.
 </div>
 
 <div class="team-member-links">
