--- a/team.qmd
+++ b/team.qmd
@@ -38,7 +38,7 @@ Jesse's research interests include the interaction of formal and informal financ
 
 _PhD, University of Cape Town_
 
-Allan's research focusses on housing, which is often the largest asset and largest liability for households. He focusses on how housing and credit decisions can be a driver of wealth inequality.
+Allan's research focuses on housing, which is often the largest asset and largest liability for households. He focuses on how housing and credit decisions can be a driver of wealth inequality.
 </div>
 
 <div class="team-member-links"> 
