--- a/research.qmd
+++ b/research.qmd
@@ -1,14 +1,16 @@
 ---
-title: ""
+title: "Our Research"
 pagetitle: "Research"
 ---
 
-## Current Projects
+We focus on advancing knowledge in household finance and development economics while generating insights that can inform local policy. Below are some of our current projects.
 
-### _Mortgage Pricing in South Africa_
+### Current Projects
 
-We aim to document differences in offer probabilities and in offered interest rates for mortgage applicants of different characteristics, e.g. age, sex, marital status, and first-time buyer status.
+#### _Mortgage Pricing in South Africa_
 
-### _The Market for Funeral Insurance in South Africa_
+Access to affordable housing finance is essential for economic mobility, yet mortgage pricing can vary significantly across different groups of applicants. This project investigates disparities in mortgage offer probabilities and interest rates based on factors such as age, gender, marital status, and first-time buyer status. By identifying potential biases and inefficiencies in the mortgage market, our research aims to contribute to policies that promote fair and transparent lending practices.
 
-Funeral insurance is a widely purchased product in South Africa, while life insurance is purchased by only a small minority of consumers. We aim to document the extent to which these two products are substitutable on both the supply and demand side of the market. On the supply side, for example, this may include regulatory barriers; on the demand side, this might include differences in mortality rates, wealth, or family structure (including, e.g. patterns of intergenerational coresidence).
+#### _The Market for Funeral Insurance in South Africa_
+
+Funeral insurance is one of the most widely purchased financial products in South Africa, while life insurance remains far less common. This project explores the extent to which these two products serve as substitutes, examining both supply- and demand-side factors. On the supply side, we assess regulatory barriers and industry practices that shape market offerings. On the demand side, we analyze how differences in mortality rates, income levels, and family structure---such as intergenerational living arrangement---affect consumer choices. Understanding these dynamics can help improve financial products and policies to better serve South African households.
