Add address in text

--- a/contact.qmd
+++ b/contact.qmd
@@ -12,12 +12,19 @@ format:
 
 #### Email us
 
-::: {.email-contact}
+::: {.contact}
 [householdfinance@sun.ac.za](mailto:householdfinance@sun.ac.za)
 :::
 
 
 #### Visit us
+
+::: {.contact}
+Department of Economics  
+Stellenbosch University  
+Stellenbosch Central  
+7602
+:::
 
 <iframe 
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d75679.48508643344!2d18.88385502842069!3d-33.93359976679794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcdb2432e9fe5d1%3A0xcb41c6b0379331f3!2sStellenbosch%20University!5e1!3m2!1sen!2sza!4v1743021094528!5m2!1sen!2sza" 
