--- a/contact.qmd
+++ b/contact.qmd
@@ -8,22 +8,30 @@ format:
         anchor-sections: false
 ---
 
-### We’d love to hear from you! 
+### Contact Us
 
-#### Email us
+We are a new and growing research centre and are actively seeking
+
+- data partners
+- research funding
+- research assistants, postgraduate students, and postdocs
+
+If you or your organisation would like to work with us, please get in touch. Research students at Stellenbosch University who are interested in household finance should email us to set up a meeting.
+
+#### **Email**
 
 ::: {.contact}
 [householdfinance@sun.ac.za](mailto:householdfinance@sun.ac.za)
 :::
 
 
-#### Visit us
+#### **Physical Address**
 
 ::: {.contact}
-Department of Economics  
-Stellenbosch University  
-Stellenbosch Central  
-7602
+Department of Economics, Stellenbosch University \
+CGW Schumann Building \
+Bosman St, Stellenbosch Central \
+Stellenbosch 7600
 :::
 
 <iframe 
