Changed layer of map and font display of address

--- a/contact.qmd
+++ b/contact.qmd
@@ -27,15 +27,13 @@ If you or your organisation would like to work with us, please get in touch. Res
 
 #### **Physical Address**
 
-::: {.contact}
-Department of Economics, Stellenbosch University \
-CGW Schumann Building \
-Bosman St, Stellenbosch Central \
+Department of Economics, Stellenbosch University  
+CGW Schumann Building  
+Bosman St, Stellenbosch Central   
 Stellenbosch 7600
-:::
 
 <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d75679.48508643344!2d18.88385502842069!3d-33.93359976679794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcdb2432e9fe5d1%3A0xcb41c6b0379331f3!2sStellenbosch%20University!5e1!3m2!1sen!2sza!4v1743021094528!5m2!1sen!2sza" 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3310.3351221030653!2d18.86467737738871!3d-33.93250782236441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcdb242ac0640e3%3A0xd8c3ef52bc869eca!2sCGW%20Schumann%20Building!5e0!3m2!1sen!2sza!4v1743082576872!5m2!1sen!2sza" 
     width="100%" 
     height="300px" 
     style="border:0;" 
