altered subheadings for research page

--- a/research.qmd
+++ b/research.qmd
@@ -5,12 +5,12 @@ pagetitle: "Research"
 
 We focus on advancing knowledge in household finance and development economics while generating insights that can inform local policy. Below are some of our current projects.
 
-### Current Projects
+**Current Projects**
 
-#### _Mortgage Pricing in South Africa_
+_Mortgage Pricing in South Africa_
 
 Access to affordable housing finance is essential for economic mobility, yet mortgage pricing can vary significantly across different groups of applicants. This project investigates disparities in mortgage offer probabilities and interest rates based on factors such as age, gender, marital status, and first-time buyer status. By identifying potential biases and inefficiencies in the mortgage market, our research aims to contribute to policies that promote fair and transparent lending practices.
 
-#### _The Market for Funeral Insurance in South Africa_
+_The Market for Funeral Insurance in South Africa_
 
-Funeral insurance is one of the most widely purchased financial products in South Africa, while life insurance remains far less common. This project explores the extent to which these two products serve as substitutes, examining both supply- and demand-side factors. On the supply side, we assess regulatory barriers and industry practices that shape market offerings. On the demand side, we analyze how differences in mortality rates, income levels, and family structure---such as intergenerational living arrangement---affect consumer choices. Understanding these dynamics can help improve financial products and policies to better serve South African households.
+Funeral insurance is one of the most widely purchased financial products in South Africa, while life insurance remains far less common. This project explores the extent to which these two products serve as substitutes, examining both supply- and demand-side factors. On the supply side, we assess regulatory barriers and industry practices that shape market offerings. On the demand side, we analyze how differences in mortality rates, income levels, and family structure --- such as intergenerational living arrangements --- affect consumer choices. Understanding these dynamics can help improve financial products and policies to better serve South African households.
